--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 
 
-
+/* 
 .khungcmnd {
     margin-bottom: 24px;
     width: 100%;
@@ -168,4 +168,4 @@
     max-width:100%;
     max-height:100%;
     border-radius: 8px;
-}
+} */
