--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,71 @@
 
 
 .layout-content{
-    @apply dark:bg-gray-900
+    @apply dark:bg-gray-900 bg-gray-100
 }
 body{
     @apply dark:text-white
 }
+
+
+
+.custom-radio-card {
+    padding: 10px 16px;
+    border: 1px solid var(--color-border-2);
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    @apply bg-white dark:bg-gray-800
+  }
+  
+  .custom-radio-card-mask {
+    height: 14px;
+    width: 14px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    border: 1px solid var(--color-border-2);
+    box-sizing: border-box;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
+  .custom-radio-card-mask-dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+  }
+  
+  .custom-radio-card-title {
+    color: var(--color-text-1);
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+  
+  .custom-radio-card:hover,
+  .custom-radio-card-checked,
+  .custom-radio-card:hover .custom-radio-card-mask,
+  .custom-radio-card-checked .custom-radio-card-mask {
+    border-color: rgb(var(--primary-6));
+    margin: 0;
+  }
+  
+  .custom-radio-card-checked {
+    background-color: var(--color-primary-light-1);
+  }
+  
+  .custom-radio-card:hover .custom-radio-card-title,
+  .custom-radio-card-checked .custom-radio-card-title {
+    color: rgb(var(--primary-6));
+  }
+  
+  .custom-radio-card-checked .custom-radio-card-mask-dot {
+    background-color: rgb(var(--primary-6));
+  }
 /* 
 body {
     --color-menu-dark-bg: #1E1E2D; 
